--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,10 @@
 {
-  "name": "instagram-clone",
-  "version": "1.0.0",
-  "description": "Instagram Clone with Messenger Mern Stack",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Pranav Patil",
-  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.2",
-    "nodemon": "^2.0.20",
-    "socket.io": "^4.4.1"
-
+    "mongoose": "^7.0.0",
+    "nodemon": "^2.0.21",
+    "path": "^0.12.7"
   }
 }
