--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "socket.io-client": "^4.6.1",
+    "styled-components": "^5.3.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
