--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
     "path": "^0.12.7",
     "socket.io": "^4.6.1"
