--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
     "builds": [
         {
-            "src":"./app.js",
+            "src":"./backend/app.js",
             "use":"@vercel/node"
         }
     ],
     "routes": [
         {
             "src":"/.*",
-            "dest":"app.js"
+            "dest":"backend/app.js"
         }
     ]
 }
