disease prediction, volunteer

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,12 @@
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
     "path": "^0.12.7",
+    "pickle": "^0.2.0",
     "socket.io": "^4.6.1"
   },
   "name": "backend",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
