--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
     "path": "^0.12.7",
+    "pickle": "^0.2.0",
     "socket.io": "^4.6.1"
   },
   "name": "medi-share-production",
