--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,17 +7,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "framer-motion": "^10.12.12",
     "google-map-react": "^2.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "socket.io-client": "^4.6.1",
+    "stream-http": "^3.2.0",
     "styled-components": "^5.3.8",
     "web-vitals": "^2.1.4"
   },
