--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@here/maps-api-for-javascript": "^1.41.1",
+    "@mapbox/mapbox-sdk": "^0.15.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +13,8 @@
     "bootstrap": "^5.2.3",
     "framer-motion": "^10.12.12",
     "google-map-react": "^2.2.0",
+    "mapbox-gl": "^2.15.0",
+    "mapbox-gl-geocoder": "^2.0.1",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^2.7.2",
