--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@here/maps-api-for-javascript": "^1.41.1",
     "@mapbox/mapbox-sdk": "^0.15.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,6 +15,7 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "emoji-mart": "^5.5.2",
     "framer-motion": "^10.12.12",
     "google-map-react": "^2.2.0",
     "mapbox-gl": "^2.15.0",
