--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,24 @@
 {
   "dependencies": {
-    
+    "@google-cloud/storage": "^6.11.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^7.0.0",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
     "path": "^0.12.7",
     "pickle": "^0.2.0",
-    "socket.io": "^4.6.1"
+    "react-dropzone": "^14.2.3",
+    "react-webcam": "^7.1.0",
+    "socket.io": "^4.6.1",
+    "twilio": "^4.12.0"
   },
   "name": "backend",
   "version": "1.0.0",
