--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-dropzone": "^14.2.3",
     "react-intersection-observer": "^9.4.3",
     "react-modal": "^3.16.1",
+    "react-otp-input": "^3.0.2",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
