Admin Analytics Charts

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.3.0",
     "emoji-mart": "^5.5.2",
     "firebase": "^9.22.2",
     "framer-motion": "^10.12.12",
@@ -25,6 +26,7 @@
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^2.7.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-intersection-observer": "^9.4.3",
